src/runtime/tests/golden/errors/21_multi_error/source.z42
namespace Demo;

// Function with a statement-level parse error; parser should recover and continue
void Func1() {
    var x = ;
}

// Second function with another statement-level parse error
void Func2() {
    var y = ;
}
